<resources>
    <string name="app_name">그린드라이브</string>
    <string name="confirm">확인</string>
    <string name="cancel">취소</string>

    <!--    login   -->
    <string name="login">로그인</string>
    <string name="phone_num">핸드폰 번호</string>
    <string name="pw">비밀번호</string>

    <!--    noti    -->
    <string name="notification">공지사항</string>
    <string name="noti_title_hint">제목을 입력해주세요.</string>
    <string name="noti_content_hint">내용을 입력해주세요.</string>
    <string name="noti_write">작성하기</string>
    <string name="noti_edit">편집</string>
    <string name="noti_delete">삭제</string>
    <string name="noti_confirm">작성완료</string>

    <!--    admin_main  -->
    <string name="current_car">현재 운행중인 차량</string>
    <string name="real_time_car">실시간 차량 확인</string>
    <string name="manage_user">사용자 관리</string>
    <string name="manage_car">차량관리</string>
    <string name="transportation_history">운송내역</string>

    <!--    user_main  -->
    <string name="start">출발</string>
    <string name="end">도착</string>

    <!--    history  -->
    <string name="search">검색</string>
    <string name="driver_name">기사명</string>
    <string name="car_info">차량정보</string>
    <string name="start_time">출발시각</string>
    <string name="end_time">도착시각</string>
    <string name="history_title">운송 내역보기</string>
    <string name="car_num">차량번호</string>
    <string name="start_info">출발정보</string>
    <string name="end_info">도착정보</string>

    <!--    manage_user   -->
    <string name="search_driver">기사명 검색</string>
    <string name="contract">계약종류</string>
    <string name="complete">완료건수</string>
    <string name="signing">가입일자</string>
    <string name="add_user">사용자 추가</string>
    <string name="edit_user">사용자 수정</string>
    <string name="user_name">사용자명</string>
    <string name="user_phone">휴대폰번호</string>
    <string name="user_contact">계약형태</string>
    <string name="user_free">프리랜서</string>
    <string name="user_regular">정규직</string>


    <!--    manage_car   -->
    <string name="model">모델</string>
    <string name="car_year">연식</string>
    <string name="search_car">차량 검색</string>

    <!--    check_car   -->
    <string name="operation">운행중</string>
    <string name="not_operation">미 운행 차량</string>
</resources>