<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:app="http://schemas.android.com/apk/res-auto">
    <data>
        <variable
            name="actionbar"
            type="com.jungbang.transitionmanager.ui.common.ActionBar" />

        <variable
            name="listener"
            type="com.jungbang.transitionmanager.ui.notice.NoticeCreateActivity" />
    </data>

    <androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <include
            android:id="@+id/anc_ic_top"
            layout="@layout/view_actionbar"
            app:actionbar="@{actionbar}"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"/>

        <EditText
            android:id="@+id/anc_et_title"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:layout_marginStart="20dp"
            android:hint="@string/noti_title_hint"
            android:fontFamily="@font/notosanskr_medium"
            android:textSize="14sp"
            android:textColor="@color/black"
            android:background="@color/transparent"
            app:layout_constraintTop_toBottomOf="@id/anc_ic_top"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"/>

        <View
            android:id="@+id/vi_div"
            android:layout_width="0dp"
            android:layout_height="1dp"
            android:layout_marginTop="20dp"
            android:background="@color/gray_f1f1f1"
            app:layout_constraintTop_toBottomOf="@id/anc_et_title"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"/>

        <EditText
            android:id="@+id/anc_et_content"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_margin="20dp"
            android:hint="@string/noti_content_hint"
            android:fontFamily="@font/notosanskr_regular"
            android:textStyle="normal"
            android:textSize="14sp"
            android:textColor="@color/black"
            android:lineSpacingExtra="6sp"
            android:background="@color/transparent"
            app:layout_constraintTop_toBottomOf="@id/vi_div"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"/>

        <Button
            android:layout_width="0dp"
            android:layout_height="56dp"
            android:layout_margin="16dp"
            android:fontFamily="@font/notosanskr_regular"
            android:textStyle="normal"
            android:textSize="16sp"
            android:textColor="#ffffff"
            android:lineSpacingExtra="4sp"
            android:text="@string/noti_confirm"
            android:onClick="@{listener::onClick}"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"/>

    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>