<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:tools="http://schemas.android.com/tools">

    <data>

        <variable
            name="actionbar"
            type="com.jungbang.transitionmanager.ui.common.ActionBar" />
    </data>

    <androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/gray_f6f6f6">

        <include
            android:id="@+id/acm_inc_top"
            layout="@layout/view_actionbar"
            android:layout_width="0dp"
            android:layout_height="56dp"
            app:actionbar="@{actionbar}"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <View
            android:id="@+id/vi_div_1"
            android:layout_width="0dp"
            android:layout_height="84dp"
            android:background="@color/green_0ECC6D"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/acm_inc_top" />

        <androidx.constraintlayout.widget.ConstraintLayout
            android:id="@+id/acm_cl_top"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="20dp"
            android:background="@drawable/bg_rect_white_fill_r10"
            android:padding="12dp"
            app:layout_constraintBottom_toBottomOf="@id/vi_div_1"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/vi_div_1">

            <ImageView
                android:id="@+id/acm_iv_search"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="18dp"
                android:layout_marginTop="24dp"
                android:src="@drawable/icon"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <EditText
                android:id="@+id/acm_et_search"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="11dp"
                android:layout_marginTop="24dp"
                android:layout_marginEnd="16dp"
                android:background="@color/transparent"
                android:fontFamily="sans-serif"
                android:hint="@string/search_car"
                android:textColor="@color/white"
                android:textSize="14sp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toEndOf="@id/acm_iv_search"
                app:layout_constraintTop_toTopOf="parent" />

            <androidx.appcompat.widget.AppCompatButton
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="21dp"
                android:background="@drawable/bg_rect_green_r10_inline1"
                android:fontFamily="sans-serif-medium"
                android:gravity="center"
                android:lineSpacingExtra="4sp"
                android:text="@string/search"
                android:textColor="#0ecc6d"
                android:textSize="16sp"
                android:textStyle="normal"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/acm_et_search" />
        </androidx.constraintlayout.widget.ConstraintLayout>

        <Spinner
            android:id="@+id/acm_sp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:layout_marginEnd="20dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toBottomOf="@id/acm_cl_top" />

        <View
            android:id="@+id/vi_div_2"
            android:layout_width="0dp"
            android:layout_height="1dp"
            android:layout_marginHorizontal="20dp"
            android:layout_marginTop="16dp"
            android:background="@color/gray_e9e9e9"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/acm_sp" />

        <LinearLayout
            android:id="@+id/acm_ll_list_header"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="24dp"
            android:layout_marginTop="20dp"
            android:layout_marginEnd="20dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/vi_div_2">

            <TextView
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:fontFamily="@font/notosanskr_bold"
                android:gravity="center"
                android:text="@string/car_num"
                android:textColor="#0ecc6d"
                android:textSize="12sp"
                android:textStyle="bold" />

            <TextView
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:fontFamily="@font/notosanskr_bold"
                android:gravity="center"
                android:text="@string/model"
                android:textColor="#0ecc6d"
                android:textSize="12sp"
                android:textStyle="bold" />

            <TextView
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:fontFamily="@font/notosanskr_bold"
                android:gravity="center"
                android:text="@string/car_year"
                android:textColor="#0ecc6d"
                android:textSize="12sp"
                android:textStyle="bold" />

        </LinearLayout>

        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/acm_rv_list"
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:layout_marginHorizontal="20dp"
            android:layout_marginTop="12dp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/acm_ll_list_header" />

    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>