<?xml version="1.0" encoding="utf-8"?>
<layout>
    <data>
        <variable
            name="listener"
            type="com.jungbang.transitionmanager.ui.admin.AdminHistoryDialog" />
    </data>

    <androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        xmlns:tools="http://schemas.android.com/tools"
        android:layout_width="296dp"
        android:layout_height="wrap_content"
        android:background="@drawable/bg_rect_white_fill_r8"
        android:paddingHorizontal="20dp"
        android:paddingBottom="17dp">

        <TextView
            android:id="@+id/dh_tv_rank"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="24dp"
            android:fontFamily="@font/notosanskr_bold"
            android:lineSpacingExtra="8sp"
            android:text="정규직"
            android:textColor="@color/green_0ECC6D"
            android:textSize="12sp"
            android:textStyle="bold"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/dh_tv_name"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:fontFamily="@font/notosanskr_bold"
            android:lineSpacingExtra="-4sp"
            android:textColor="@color/gray_333333"
            android:textSize="24sp"
            app:layout_constraintStart_toStartOf="@id/dh_tv_rank"
            app:layout_constraintTop_toBottomOf="@id/dh_tv_rank"
            tools:text="박하늘" />

        <TextView
            android:id="@+id/dh_tv_date"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:fontFamily="@font/notosanskr_regular"
            android:gravity="end"
            android:lineSpacingExtra="7sp"
            android:textColor="@color/gray_999999"
            android:textSize="13sp"
            android:textStyle="bold"
            app:layout_constraintBottom_toBottomOf="@id/dh_tv_name"
            app:layout_constraintEnd_toEndOf="parent"
            tools:text="2021.11.24" />

        <View
            android:id="@+id/vi_div_1"
            android:layout_width="0dp"
            android:layout_height="1dp"
            android:layout_marginTop="20dp"
            android:background="@color/gray_e9e9e9"
            app:layout_constraintEnd_toEndOf="@id/dh_tv_date"
            app:layout_constraintStart_toStartOf="@id/dh_tv_name"
            app:layout_constraintTop_toBottomOf="@id/dh_tv_name" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:fontFamily="@font/notosanskr_bold"
            android:lineSpacingExtra="7sp"
            android:text="@string/car_num"
            android:textColor="@color/gray_999999"
            android:textSize="13sp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="@id/dh_tv_car_num" />

        <TextView
            android:id="@+id/dh_tv_car_num"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:fontFamily="@font/notosanskr_medium"
            android:gravity="end"
            android:textColor="@color/gray_333333"
            android:textSize="14sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toBottomOf="@id/vi_div_1"
            android:text="23가 16425" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:fontFamily="@font/notosanskr_bold"
            android:lineSpacingExtra="7sp"
            android:text="@string/start_info"
            android:textColor="@color/gray_999999"
            android:textSize="13sp"
            app:layout_constraintBottom_toBottomOf="@id/dh_tv_start_addr"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="@id/dh_tv_start_time" />

        <TextView
            android:id="@+id/dh_tv_start_time"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="24dp"
            android:fontFamily="@font/notosanskr_medium"
            android:gravity="end"
            android:lineSpacingExtra="1.3sp"
            android:textColor="#333333"
            android:textSize="14sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toBottomOf="@id/dh_tv_car_num"
            android:text="09 : 37" />

        <TextView
            android:id="@+id/dh_tv_start_addr"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:fontFamily="@font/notosanskr_medium"
            android:gravity="end"
            android:lineSpacingExtra="1.3sp"
            android:textColor="#333333"
            android:textSize="10sp"
            app:layout_constraintEnd_toEndOf="@id/dh_tv_start_time"
            app:layout_constraintTop_toBottomOf="@id/dh_tv_start_time"
            android:text="서울 영등포구 OO로 OO길 XXX 아파트 " />


        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:fontFamily="@font/notosanskr_bold"
            android:lineSpacingExtra="7sp"
            android:text="@string/end_info"
            android:textColor="@color/gray_999999"
            android:textSize="13sp"
            app:layout_constraintBottom_toBottomOf="@id/dh_tv_end_addr"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="@id/dh_tv_end_time" />

        <TextView
            android:id="@+id/dh_tv_end_time"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="24dp"
            android:fontFamily="@font/notosanskr_medium"
            android:gravity="end"
            android:lineSpacingExtra="1.3sp"
            android:textColor="#333333"
            android:textSize="14sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toBottomOf="@id/dh_tv_start_addr"
            android:text="09 : 37" />

        <TextView
            android:id="@+id/dh_tv_end_addr"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:fontFamily="@font/notosanskr_medium"
            android:gravity="end"
            android:lineSpacingExtra="1.3sp"
            android:textColor="#333333"
            android:textSize="10sp"
            app:layout_constraintEnd_toEndOf="@id/dh_tv_end_time"
            app:layout_constraintTop_toBottomOf="@id/dh_tv_end_time"
            android:text="서울 영등포구 OO로 OO길 XXX 아파트 " />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:fontFamily="@font/notosanskr_bold"
            android:lineSpacingExtra="7sp"
            android:textColor="@color/gray_999999"
            android:textSize="13sp"
            android:textStyle="bold"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="@id/dh_tv_capacity"
            android:text="화물적재량" />

        <TextView
            android:id="@+id/dh_tv_capacity"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="24dp"
            android:fontFamily="@font/notosanskr_medium"
            android:gravity="end"
            android:textColor="@color/gray_333333"
            android:textSize="14sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toBottomOf="@id/dh_tv_end_addr"
            android:text="5t" />

        <ImageView
            android:id="@+id/dh_iv_capacity"
            android:layout_width="272dp"
            android:layout_height="118dp"
            android:layout_marginTop="20dp"
            android:background="@drawable/bg_rect_white_fill_r8"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/dh_tv_capacity" />

        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/dh_btn_confirm"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="17dp"
            android:background="@drawable/bg_rect_333333_fill_r8"
            android:fontFamily="@font/notosanskr_medium"
            android:gravity="center"
            android:lineSpacingExtra="4sp"
            android:text="@string/confirm"
            android:textColor="@color/white"
            android:textSize="16sp"
            android:onClick="@{listener::onClick}"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/dh_iv_capacity" />

    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>